poner fin preloader

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,10 @@
       <p class="loader__label">Admin Pro</p>
     </div>
   </div>
+  <!-- ============================================================== -->
+  <!-- END Preloader - style you can find in spinners.css -->
+  <!-- ============================================================== -->
+
 
   <app-root></app-root>
 
